removes all .fc-event-time styles and replaces with css to throw it off the screen (this fixes the issue with the title and everything else being pushed down 18px).  sets max-height for thumb-wrap to 90px (from 75px) [touch: 530,766]

--- a/css/calendar.css
+++ b/css/calendar.css
@@ -293,7 +293,6 @@ a.fc-event {
 	overflow: hidden;
 	}
 
-.fc-event-time,
 .fc-event-title {
 	padding: 0 1px;
 	}
@@ -446,20 +445,10 @@ table.fc-border-separate {
 	padding: 2px 2px 1px; /* distance between events and day edges */
 	}
 
-/* event styles */
-
-.fc-grid .fc-event-time {
-	font-weight: bold;
-	}
-
 /* right-to-left */
 
 .fc-rtl .fc-grid .fc-day-number {
 	float: left;
-	}
-
-.fc-rtl .fc-grid .fc-event-time {
-	float: right;
 	}
 
 
@@ -564,11 +553,6 @@ table.fc-border-separate {
 	overflow: hidden;
 	}
 
-.fc-event-vert .fc-event-time {
-	white-space: nowrap;
-	font-size: 10px;
-	}
-
 .fc-event-vert .fc-event-bg { /* makes the event lighter w/ a semi-transparent overlay  */
 	position: absolute;
 	z-index: 1;
@@ -665,12 +649,13 @@ class name '.event-has-thumb' is added to top level parent event */
 
 .fc-view-agendaDay .fc-agenda-body   td div {min-height:50px;}
 #espresso_calendar .fc-view-agendaWeek  .thumb-wrap img {height: 20px;}
-.thumb-wrap { max-height: 75px; overflow: hidden; }
+.thumb-wrap { max-height: 90px; overflow: hidden; display: block; }
 
 .fc-button-prev, .fc-button-next { font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif; }
 
-
 .fc-event a:hover { text-shadow: none; }
+
+.fc-event-time { position: absolute; left: -999em; float: left; height: 0px; }
 
 /* Event Espresso default tooltip styles */
 .ui-tooltip-ee{
